# security_scanner

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
secaudit/: __init__.py  baseline.py  cli.py  compliance.py  config.py  models.py  report.py  sbom.py
secaudit/formatters/: __init__.py  sarif.py
secaudit/scanners/: __init__.py  base.py  code.py  dependencies.py  git_history.py  headers.py  secrets.py  tls.py
tests/: conftest.py  test_baseline.py  test_cli.py  test_code.py  test_compliance.py  test_config.py  test_dependencies.py  test_git_history.py  test_headers.py  test_sbom.py  test_secrets.py  test_tls.py
